@@ -24,7 +24,7 @@ Changed wallpaper colors not updating on Android 12?
 You need to turn off your screen. The next time you turn it back on, the new colors should be applied to the whole system. It might require some interaction with the device for the home screen widgets to also update their colors.
 
 Parallax/zoom animations stop after closing Doodle settings?
-This seems like a bug of MIUI 12.5, if you instead apply the wallpaper in your system's wallpaper picker it should work. This possibility is also explained when you tap on the button to set the wallpaper.
+This seems like a bug of MIUI 12.5, if you instead apply the wallpaper in your system's wallpaper picker it should work. This possibility is also explained when you long-tap on the big button to set the wallpaper.
 
 Wallpaper not applied to lockscreen?
 Try searching for your device's name and this question on the Internet to get possible solutions.
